# aiunite

./: .gitmodules  CMakeLists.txt  README.md
cmake/: llvm-project.cmake  mlir-hal.cmake
examples/: CMakeLists.txt
examples/execution_engine/: CMakeLists.txt  main.cpp
examples/kernel_generator/: CMakeLists.txt  main.cpp
include/aiunite/: build.h  client.h  comms.h  devices.h  protocol.h  provider.h  service.h  solution.h  types.h
include/aiunite/client/: build.h  comms.h  devices.h  solution.h
include/aiunite/common/: protocol.h  types.h
include/aiunite/internal/: context.h  devices.h  logger.h  model.h  solution.h  support.h
include/aiunite/service/: server.h
internal/_aiu/: logger.h  support.h
internal/_aiu/client/: devices.h  model.h  request.h  solution.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  build.cpp  client.cpp  communication.cpp  device_request.cpp  devices.cpp  model.cpp  solution.cpp
src/common/: CMakeLists.txt  logger.cpp  protocol.cpp
src/provider/: CMakeLists.txt  service.cpp
src/service/: CMakeLists.txt  service.cpp
